# N1ago3

./: .env.example  .gitignore  .replit  app.py  drizzle.config.ts  eslint.config.js  index.html  models.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  tailwind.config.js  tsconfig.json  tsconfig.server.json  vite.config.ts
attached_assets/: Pasted--articles-question-Onde-posso-sacar-meu-dinheiro-answe-_1765995293449.txt  Pasted--clientRequest-O-que-o-cliente-solicitou-ou-qual-proble_1765721803602.txt  Pasted--content-text-Para-obter-mais-informa-es-sobre-o-Cart-o_1765507397266.txt  Pasted--hora-0-quartas-1132-outros-dias-7060-total-8192--17661_1766148504796.txt  Pasted--id-1-name-Erro-na-contrata-o-do-Cart-o-de-Cr-dito-desc_1765807124468.txt  Pasted--id-1-produto-Conta-Digital-subproduto-null-full-name-C_1765807681438.txt  Pasted--id-1-produto-Conta-Digital-subproduto-null-full-name-C_1766230150986.txt  Pasted--id-10-config-type-article-enrichment-enabled-true-trig_1766234546836.txt  Pasted--id-101-question-Como-posso-contestar-uma-compra-no-meu_1766190509283.txt  Pasted--id-20-name-Ativa-o-product-catalog-id-2-product-full-n_1766190493752.txt  Pasted--id-3-config-type-response-enabled-true-trigger-event-t_1766234518860.txt  Pasted--id-4-objective-problem-id-4-product-id-2-created-at-20_1765807217504.txt  Pasted--id-43-intent-name-Ativar-cart-o-subject-id-20-subject-_1765769568785.txt  Pasted--id-431199-context-id-intent-85-prompt-user-Voc-um-espe_1766233913046.txt  Pasted--name-description--1765575536666_1765575536667.txt  (+48 more)
(+955 files in other folders)
